# shaderv

./: README.md  build.bat
auxiliary/: CMakeLists.txt
auxiliary/dfx/: CMakeLists.txt  DFX.cpp  DFX.h  DumpGenerator.cpp  DumpGenerator.h  ErrorManager.cpp  ErrorManager.h  Logger.cpp  Logger.h
darkss/: QDarkStyleSheet-source.txt
nodes/: nodeeditor-source.txt
nodes/nodeeditor-2.1.3/include/nodes/internal/: QStringStdHash.hpp
qtads/: QtAdvancedDockingSystem-source.txt
qtads/Qt-Advanced-Docking-System-3.7.1/: CMakeLists.txt  README.md
qtads/Qt-Advanced-Docking-System-3.7.1/PyQtAds/: _version.py
qtads/Qt-Advanced-Docking-System-3.7.1/demo/: main.cpp
scripts/: build_msvc.bat  config.bat  debug_msvc_copy_libs.bat
shaderv/: Auxiliary.hpp  CMakeLists.txt
shaderv/graph/: Main.cpp  MainWindow.cpp  MainWindow.h  QtHeaders.hpp
shaderv/graph/docks/: View.hpp  ViewManager.hpp
shaderv/gui/: Main.cpp  MainWindow.cpp  MainWindow.h  NodesHeaders.hpp  QtHeaders.hpp  QtPropGen.hpp  UiBasic.hpp
shaderv/gui/mvp/: Model.hpp  ModelManager.hpp  Presenter.hpp  PresenterManager.hpp  ViewCenter.hpp  ViewDocker.hpp  ViewManager.hpp
shaderv/gui/subs/: MGraph.cpp  MGraph.h  VGraph.cpp  VGraph.h
shaderv/gui/subs/graph/: GraphInternalWidgetDeleter.cpp  GraphInternalWidgetDeleter.h  NBaseModel.hpp  NValueData.hpp  NValueDataConvertor.hpp
shaderv/gui/subs/graph/combine/: NMergeVectorModel.h  NMergeVectorModel.inl
shaderv/gui/subs/graph/input/: NDecimalInputModel.cpp  NIntegerInputModel.cpp  NIntegerInputModel.h
shaderv/gui/subs/graph/value/: NDecimalInputModel.cpp  NDecimalInputModel.h  NIntegerInputModel.cpp
shaderv/ui/: MainWindow.cpp  QtAdsHeaders.hpp
shaderv/ui/docks/: View.hpp
